c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/libraries/no_function_calls/division_client.c
int f(int a, int b, int c, int d);

int main(void) {
    return f(10, 2, 100, 4);
}