c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_types/assign_fun_to_variable.c
int x(void);
int main(void) {
    int a = 10;
    a = x;
    return 0;
}